[gd_scene load_steps=8 format=3 uid="uid://dpbeo8x6sx84j"]

[ext_resource type="Script" uid="uid://bn8tbfdnauet" path="res://Scripts/chest.gd" id="1_03e56"]
[ext_resource type="Script" uid="uid://c4onubgop7ca7" path="res://Scripts/inventory_item.gd" id="2_ji2vm"]
[ext_resource type="Texture2D" uid="uid://dfyi1s5tmt3cj" path="res://Assets/tileset.png" id="2_tbchg"]
[ext_resource type="Resource" uid="uid://cjdgk3aj7vx6q" path="res://Resources/sword.tres" id="3_7y7ou"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0y68v"]
atlas = ExtResource("2_tbchg")
region = Rect2(0, 16, 8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q1flh"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gbje4"]
size = Vector2(10, 10)

[node name="Chest" type="StaticBody2D"]
script = ExtResource("1_03e56")
contents = Array[ExtResource("2_ji2vm")]([ExtResource("3_7y7ou")])

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_0y68v")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_q1flh")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_gbje4")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
